# lmon2

./: .gitignore  CMakeLists.txt  README.md  init-lmon.csh  init-lmon2.sh  run_lmon2.cxx
base/: CMakeLists.txt
base/include/: BuilderBase.h  ColorDecoder.h  ComponentBuilder.h  DetectorConstruction.h  DetectorData.h  EventAction.h  GeneratorAction.h  GeoParser.h  HepMC3AsciiReader.h  HepMC3RootTreeReader.h  LoadIN.h  LoadXML.h  LogicVolFinder.h  MCAttribData.h  MCAttributes.h  MCParticleAction.h  MCParticles.h  TParticleReader.h  use_hepmc3.h.in
base/src/: ActionInitialization.cxx  ColorDecoder.cxx  ComponentBuilder.cxx  DetectorConstruction.cxx  EventAction.cxx  GeneratorAction.cxx  GeoParser.cxx  HepMC3AsciiReader.cxx  HepMC3RootTreeReader.cxx  LoadIN.cxx  LoadXML.cxx  LogicVolFinder.cxx  MCAttribData.cxx  MCAttributes.cxx  MCParticleAction.cxx  RootOut.cxx  TParticleReader.cxx
beamline/: CMakeLists.txt
beamline/include/: BeamAndrii20240604.h  BeamAndrii_SimParameters.h  BeamBuilder.h  BeamDipole.h  BeamQuadrupole.h  ParticleCounter.h  ParticleCounterHits.h  QDMagnet.h  ReadGDML.h  VacDrift.h
beamline/src/: BeamAndrii20240604.cxx  BeamAndrii_SimParameters.cxx  BeamBuilder.cxx  BeamDipole.cxx  BeamQuadrupole.cxx  CylBeam.cxx  CylSegment.cxx  ParticleCounter.cxx  QDMagnet.cxx  ReadGDML.cxx  VacDrift.cxx
calorimeters/: CMakeLists.txt
calorimeters/include/: CalPWO.h  CalPWOHits.h  CaloBPC.h  CaloBPCHits.h  CaloBuilder.h  FiberXYCal.h  FiberYZ.h  HitAtID.h  OpSiDet.h  PhotoCathPMT.h  PhotoHitsV2.h  PhotoHitsV3.h  QCal1.h  QCal2.h  QCal2Fibers.h
calorimeters/src/: CalPWO.cxx  CalPWOHits.cxx  CaloBPC.cxx  CaloBuilder.cxx  FiberXYCal.cxx  FiberYZ.cxx  HcalA262.cxx  OpSiDet.cxx  PhotoCathPMT.cxx  (+6 more)
examples/LookupProblemSolver/LPS_library/: CMakeLists.txt
plots/: acalc.h  plot_utils.py
reconstruction/: CMakeLists.txt
reconstruction/include/: CalPWOClusterWavg.h  CaloCluster.h  EThetaPhiReco.h  EThetaPhiRecoV2.h  EThetaPhiRecoVirt.h  FoamCellFinder.h  IOProgramOptions.h  LookupProblemSolver.h  MedCellFinder.h  SumCellFinder.h  TagCalPWO.h  TagClustersBasic.h  TagTpix4Acceptance.h  TagTpix4Reco.h  TagTrackBasic.h  TagTrackBasicMakeResp.h  TagTrackBasicVis.h  TagTrackFindBasic.h  TagTrackFinder.h  TagTrackFinderLoopGen.h  TagTrackMakeLPS.h  TagTrackRecLPS.h  TagTracks.h  Tpix4HitAnalysis.h  TrkClusterFinder.h  TrkHitsTransform.h  TrkPlaneClusters.h
reconstruction/python/: run_TagCalPWO.py  run_TagTpix4Acceptance.py  run_TagTpix4Reco.py  run_TagTrackBasic.py  run_TagTrackBasicMakeResp.py  run_TagTrackBasicVis.py  run_TagTrackMakeLPS.py  run_TagTrackRecLPS.py  run_Tpix4HitAnalysis.py
reconstruction/src/: CalPWOClusterWavg.cxx  EThetaPhiReco.cxx  EThetaPhiRecoV2.cxx  FoamCellFinder.cxx  IOProgramOptions.cxx  LookupProblemSolver.cxx  MedCellFinder.cxx  SumCellFinder.cxx  TagCalPWO.cxx  TagClustersBasic.cxx  TagTpix4Acceptance.cxx  TagTpix4Reco.cxx  TagTrackBasic.cxx  TagTrackBasicMakeResp.cxx  TagTrackBasicVis.cxx  TagTrackFindBasic.cxx  TagTrackFinder.cxx  TagTrackFinderLoopGen.cxx  TagTrackMakeLPS.cxx  TagTrackRecLPS.cxx  TagTracks.cxx  Tpix4HitAnalysis.cxx  TrkClusterFinder.cxx  TrkHitsTransform.cxx  TrkPlaneBasicHits.cxx
trackers/: CMakeLists.txt
trackers/include/: Timepix4v1.h  TrackerBuilder.h  TrkPlaneBasic.h  TrkPlaneBasicHits.h
trackers/src/: Timepix4v1.cxx  TrackerBuilder.cxx  TrkPlaneBasic.cxx  TrkPlaneBasicHits.cxx
training/: TaggerRegressionlmon2.C
(+180 files in other folders)
